--- a/shell/.zcompdump-Dinh’s MacBook Pro-5.8
+++ b/shell/.zcompdump-Dinh’s MacBook Pro-5.8
@@ -1,4 +1,4 @@
-#files: 1070	version: 5.8
+#files: 938	version: 5.8
 
 _comps=(
 '-' '_precommand'
@@ -38,7 +38,6 @@ _comps=(
 '-value-,ANSIBLE_STDOUT_CALLBACK,-default-' '_ansible'
 '-value-,ANT_ARGS,-default-' '_ant'
 '-value-,CFLAGS,-default-' '_gcc'
-'-value-,CMAKE_GENERATOR,-default-' '_cmake'
 '-value-,CPPFLAGS,-default-' '_gcc'
 '-value-,CXXFLAGS,-default-' '_gcc'
 '-value-,DISPLAY,-default-' '_x_display'
@@ -92,9 +91,6 @@ _comps=(
 'Mail' '_mail'
 'Mosaic' '_webbrowser'
 'SuSEconfig' '_SUSEconfig'
-'VBoxHeadless' '_virtualbox'
-'VBoxManage' '_virtualbox'
-'_git_log_prettily' '_git'
 'a2dismod' '_a2utils'
 'a2dissite' '_a2utils'
 'a2enmod' '_a2utils'
@@ -114,12 +110,10 @@ _comps=(
 'add-zle-hook-widget' '_add-zle-hook-widget'
 'add-zsh-hook' '_add-zsh-hook'
 'admin' '_sccs'
-'afew' '_afew'
 'ali' '_mh'
 'alias' '_alias'
 'amaya' '_webbrowser'
 'analyseplugin' '_analyseplugin'
-'android' '_android'
 'animate' '_imagemagick'
 'anno' '_mh'
 'ansible' '_ansible'
@@ -152,17 +146,14 @@ _comps=(
 'apt-show-versions' '_apt-show-versions'
 'aptitude' '_aptitude'
 'apvlv' '_pdf'
-'archlinux-java' '_archlinux-java'
 'arecord' '_alsa-utils'
 'arena' '_webbrowser'
 'arp' '_arp'
 'arping' '_arping'
-'artisan' '_artisan'
 'asciidoctor' '_asciidoctor'
 'asciinema' '_asciinema'
 'ash' '_sh'
 'at' '_at'
-'atach' '_atach'
 'atq' '_at'
 'atrm' '_at'
 'attr' '_attr'
@@ -190,12 +181,10 @@ _comps=(
 'bibtex' '_bibtex'
 'bindkey' '_bindkey'
 'bison' '_bison'
-'bitcoin-cli' '_bitcoin-cli'
 'bmake' '_make'
 'bogofilter' '_bogofilter'
 'bogotune' '_bogofilter'
 'bogoutil' '_bogofilter'
-'bower' '_bower'
 'bpython' '_bpython'
 'bpython-gtk' '_bpython'
 'bpython-urwid' '_bpython'
@@ -227,7 +216,6 @@ _comps=(
 'bug' '_bug'
 'buildhash' '_ispell'
 'builtin' '_builtin'
-'bundle' '_bundle'
 'bunzip2' '_bzip2'
 'burst' '_mh'
 'bzcat' '_bzip2'
@@ -242,12 +230,9 @@ _comps=(
 'caffeinate' '_caffeinate'
 'cal' '_cal'
 'calendar' '_calendar'
-'cap' '_cap'
-'cask' '_cask'
 'cat' '_cat'
 'catchsegv' '_precommand'
 'cc' '_gcc'
-'ccache' '_ccache'
 'ccal' '_ccal'
 'cd' '_cd'
 'cdbs-edit-patch' '_cdbs-edit-patch'
@@ -258,13 +243,11 @@ _comps=(
 'cdrecord' '_cdrecord'
 'ceilometer' '_openstack'
 'certtool' '_gnutls'
-'cf' '_cf'
 'cftp' '_twisted'
 'chage' '_users'
 'chattr' '_chattr'
 'chcon' '_chcon'
 'chdir' '_cd'
-'cheat' '_cheat'
 'chflags' '_chflags'
 'chfn' '_users'
 'chgrp' '_chown'
@@ -272,10 +255,8 @@ _comps=(
 'chkconfig' '_chkconfig'
 'chkstow' '_stow'
 'chmod' '_chmod'
-'choc' '_choc'
 'chown' '_chown'
 'chpass' '_chsh'
-'chromium' '_chromium'
 'chroot' '_chroot'
 'chrt' '_chrt'
 'chsh' '_chsh'
@@ -290,11 +271,9 @@ _comps=(
 'clear' '_nothing'
 'cloudkitty' '_openstack'
 'clusterdb' '_postgresql'
-'cmake' '_cmake'
 'cmp' '_cmp'
 'co' '_rcs'
 'code' '_code'
-'coffee' '_coffee'
 'column' '_column'
 'comb' '_sccs'
 'combine' '_imagemagick'
@@ -308,12 +287,9 @@ _comps=(
 'composer.phar' '_composer'
 'composite' '_imagemagick'
 'compress' '_compress'
-'conan' '_conan'
 'conch' '_twisted'
-'concourse' '_concourse'
 'config.status' '_configure'
 'configure' '_configure'
-'console' '_console'
 'convert' '_imagemagick'
 'coreadm' '_coreadm'
 'cowsay' '_cowsay'
@@ -346,8 +322,6 @@ _comps=(
 'cygserver.exe' '_cygserver'
 'cygstart' '_cygstart'
 'cygstart.exe' '_cygstart'
-'d' '_dirs'
-'dad' '_dad'
 'dak' '_dak'
 'darcs' '_darcs'
 'dash' '_sh'
@@ -380,12 +354,9 @@ _comps=(
 'designate' '_openstack'
 'devtodo' '_devtodo'
 'df' '_df'
-'dget' '_dget'
 'dhclient' '_dhclient'
 'dhclient3' '_dhclient'
-'dhcpcd' '_dhcpcd'
 'dhcpinfo' '_dhcpinfo'
-'diana' '_diana'
 'dict' '_dict'
 'diff' '_diff'
 'diff3' '_diff3'
@@ -412,7 +383,6 @@ _comps=(
 'doas' '_doas'
 'docker' '_docker'
 'dockerd' '_docker'
-'docpad' '_docpad'
 'domainname' '_yp'
 'dos2unix' '_dos2unix'
 'dosdel' '_floppy'
@@ -430,7 +400,6 @@ _comps=(
 'drill' '_drill'
 'dropdb' '_postgresql'
 'dropuser' '_postgresql'
-'drush' '_drush'
 'dsh' '_dsh'
 'dtrace' '_dtrace'
 'dtruss' '_dtruss'
@@ -452,7 +421,6 @@ _comps=(
 'e2label' '_e2label'
 'eatmydata' '_precommand'
 'ecasound' '_ecasound'
-'ecdsautil' '_ecdsautil'
 'echotc' '_echotc'
 'echoti' '_echoti'
 'ed' '_ed'
@@ -460,12 +428,10 @@ _comps=(
 'elfdump' '_elfdump'
 'elinks' '_elinks'
 'emulate' '_emulate'
-'emulator' '_emulator'
 'enable' '_enable'
 'enscript' '_enscript'
 'entr' '_entr'
 'env' '_env'
-'envdir' '_envdir'
 'eog' '_eog'
 'epdfview' '_pdf'
 'epsffit' '_psutils'
@@ -485,11 +451,9 @@ _comps=(
 'expand' '_unexpand'
 'explodepkg' '_pkgtool'
 'export' '_typeset'
-'exportfs' '_exportfs'
 'express' '_webbrowser'
 'extcheck' '_java'
 'extractres' '_psutils'
-'fab' '_fab'
 'fakeroot' '_fakeroot'
 'false' '_nothing'
 'fc' '_fc'
@@ -498,7 +462,6 @@ _comps=(
 'feh' '_feh'
 'fetch' '_fetch'
 'fetchmail' '_fetchmail'
-'ffind' '_ffind'
 'ffmpeg' '_ffmpeg'
 'fg' '_jobs_fg'
 'fgrep' '_grep'
@@ -521,7 +484,6 @@ _comps=(
 'fixwpps' '_psutils'
 'fixwwps' '_psutils'
 'flac' '_flac'
-'fleetctl' '_fleetctl'
 'flex' '_flex'
 'flex++' '_flex'
 'flipdiff' '_patchutils'
@@ -529,8 +491,6 @@ _comps=(
 'flists' '_mh'
 'float' '_typeset'
 'flowadm' '_flowadm'
-'flutter' '_flutter'
-'fly' '_concourse'
 'fmadm' '_fmadm'
 'fmt' '_fmt'
 'fmttest' '_mh'
@@ -539,7 +499,6 @@ _comps=(
 'fold' '_fold'
 'folder' '_mh'
 'folders' '_mh'
-'force' '_force'
 'fortune' '_fortune'
 'forw' '_mh'
 'fprev' '_mh'
@@ -556,10 +515,8 @@ _comps=(
 'fusermount' '_fusermount'
 'fw_update' '_fw_update'
 'fwhois' '_whois'
-'fwupdmgr' '_fwupdmgr'
 'g++' '_gcc'
 'galeon' '_webbrowser'
-'gas' '_gas'
 'gawk' '_awk'
 'gb2sum' '_md5sum'
 'gbase32' '_base64'
@@ -584,7 +541,6 @@ _comps=(
 'gdf' '_df'
 'gdiff' '_diff'
 'gdu' '_du'
-'gdv' '_git'
 'geany' '_geany'
 'gegrep' '_grep'
 'gem' '_gem'
@@ -609,33 +565,18 @@ _comps=(
 'gfmt' '_fmt'
 'gfold' '_fold'
 'ggetopt' '_getopt'
-'ggf' '_git'
-'ggfl' '_git'
-'ggl' '_git'
-'ggp' '_git'
-'ggpnp' '_git'
 'ggrep' '_grep'
-'ggu' '_git'
 'ggv' '_gnome-gv'
-'ghc' '_ghc'
-'ghc-pkg' '_ghc'
-'ghci' '_ghc'
 'ghead' '_head'
 'ghostscript' '_ghostscript'
 'ghostview' '_pspdf'
 'gid' '_id'
 'ginstall' '_install'
-'gist' '_gist'
 'git' '_git'
 'git-buildpackage' '_git-buildpackage'
-'git-flow' '_git-flow'
-'git-journal' '_git-journal'
-'git-pulls' '_git-pulls'
-'git-wtf' '_git-wtf'
 'gitk' '_git'
 'gjoin' '_join'
 'glance' '_openstack'
-'glances' '_glances'
 'gln' '_ln'
 'global' '_global'
 'glocate' '_locate'
@@ -664,10 +605,8 @@ _comps=(
 'gnutls-cli' '_gnutls'
 'gnutls-cli-debug' '_gnutls'
 'gnutls-serv' '_gnutls'
-'go' '_golang'
 'god' '_od'
 'gofmt' '_go'
-'google' '_google'
 'gpasswd' '_gpasswd'
 'gpaste' '_paste'
 'gpatch' '_patch'
@@ -723,7 +662,6 @@ _comps=(
 'gtar' '_tar'
 'gtee' '_tee'
 'gtimeout' '_timeout'
-'gtk-launch' '_gtk-launch'
 'gtouch' '_touch'
 'gtr' '_tr'
 'gtty' '_tty'
@@ -779,16 +717,12 @@ _comps=(
 'hexdump' '_hexdump'
 'hilite' '_precommand'
 'history' '_fc'
-'hledger' '_hledger'
-'homestead' '_homestead'
 'host' '_host'
 'hostname' '_hostname'
 'hotjava' '_webbrowser'
 'htop' '_htop'
-'http' '_httpie'
 'hub' '_hub'
 'hwinfo' '_hwinfo'
-'ibus' '_ibus'
 'iceweasel' '_mozilla'
 'icombine' '_ispell'
 'iconv' '_iconv'
@@ -802,7 +736,6 @@ _comps=(
 'ijoin' '_ispell'
 'import' '_imagemagick'
 'inc' '_mh'
-'include-what-you-use' '_include-what-you-use'
 'includeres' '_psutils'
 'inetadm' '_inetadm'
 'info' '_texinfo'
@@ -816,7 +749,6 @@ _comps=(
 'integer' '_typeset'
 'interdiff' '_patchutils'
 'invoke-rc.d' '_invoke-rc.d'
-'inxi' '_inxi'
 'ionice' '_ionice'
 'iostat' '_iostat'
 'ip' '_ip'
@@ -848,16 +780,11 @@ _comps=(
 'jdb' '_java'
 'jexec' '_jexec'
 'jls' '_jls'
-'jmeter' '_jmeter'
-'jmeter-plugins' '_jmeter-plugins'
 'jobs' '_jobs_builtin'
 'joe' '_joe'
 'join' '_join'
-'jonas' '_jonas'
 'jot' '_jot'
 'jq' '_jq'
-'jrnl' '_jrnl'
-'kak' '_kak'
 'kdeconnect-cli' '_kdeconnect'
 'keystone' '_openstack'
 'keytool' '_java'
@@ -866,10 +793,8 @@ _comps=(
 'killall' '_killall'
 'killall5' '_killall'
 'kioclient' '_kfmclient'
-'kitchen' '_kitchen'
 'kldload' '_kld'
 'kldunload' '_kld'
-'knife' '_knife'
 'knock' '_knock'
 'konqueror' '_webbrowser'
 'kpartx' '_kpartx'
@@ -937,7 +862,6 @@ _comps=(
 'ltrace' '_ltrace'
 'lua' '_lua'
 'luarocks' '_luarocks'
-'lunchy' '_lunchy'
 'lynx' '_lynx'
 'lz4' '_lz4'
 'lz4c' '_lz4'
@@ -957,7 +881,6 @@ _comps=(
 'makeinfo' '_texinfo'
 'makepkg' '_pkgtool'
 'man' '_man'
-'man-preview' '_man'
 'manage.py' '_django'
 'manila' '_openstack'
 'mark' '_mh'
@@ -993,11 +916,8 @@ _comps=(
 'mhpath' '_mh'
 'mhshow' '_mh'
 'mhstore' '_mh'
-'middleman' '_middleman'
 'mii-tool' '_mii-tool'
-'mina' '_mina'
 'mistral' '_openstack'
-'mix' '_mix'
 'mixerctl' '_mixerctl'
 'mkdir' '_mkdir'
 'mkfifo' '_mkfifo'
@@ -1048,13 +968,9 @@ _comps=(
 'mupdf' '_mupdf'
 'murano' '_openstack'
 'mush' '_mail'
-'mussh' '_mussh'
 'mutt' '_mutt'
-'mux' '_tmuxinator'
 'mv' '_mv'
 'mvim' '_vim'
-'mvn' '_mvn'
-'mvnDebug' '_mvn'
 'mx' '_hosts'
 'mysql' '_mysql_utils'
 'mysqladmin' '_mysql_utils'
@@ -1063,7 +979,6 @@ _comps=(
 'mysqlimport' '_mysql_utils'
 'mysqlshow' '_mysql_utils'
 'nail' '_mail'
-'nano' '_nano'
 'native2ascii' '_java'
 'nautilus' '_nautilus'
 'nawk' '_awk'
@@ -1082,7 +997,6 @@ _comps=(
 'new' '_mh'
 'newgrp' '_groups'
 'next' '_mh'
-'nft' '_nftables'
 'nginx' '_nginx'
 'ngrep' '_ngrep'
 'nice' '_nice'
@@ -1093,11 +1007,10 @@ _comps=(
 'nmblookup' '_samba'
 'nmcli' '_networkmanager'
 'nocorrect' '_precommand'
-'node' '_node'
 'noglob' '_precommand'
 'nohup' '_precommand'
 'nova' '_openstack'
-'npm' '_zbnc_zsh_better_npm_completion'
+'npm' '_npm'
 'ns' '_hosts'
 'nslookup' '_nslookup'
 'ntalk' '_other_accounts'
@@ -1117,12 +1030,10 @@ _comps=(
 'oksh' '_sh'
 'okular' '_okular'
 'open' '_open'
-'openssl' '_openssl'
 'openstack' '_openstack'
 'opera' '_webbrowser'
 'opera-next' '_webbrowser'
 'opkg' '_opkg'
-'optirun' '_optirun'
 'osascript' '_osascript'
 'osc' '_osc'
 'otool' '_otool'
@@ -1135,7 +1046,6 @@ _comps=(
 'passwd' '_users'
 'paste' '_paste'
 'patch' '_patch'
-'patool' '_patool'
 'pax' '_pax'
 'pbcopy' '_pbcopy'
 'pbpaste' '_pbcopy'
@@ -1157,8 +1067,6 @@ _comps=(
 'pdftops' '_pdf'
 'pdftotext' '_pdf'
 'pdksh' '_sh'
-'perf' '_perf'
-'periscope' '_periscope'
 'perl' '_perl'
 'perldoc' '_perldoc'
 'pfctl' '_pfctl'
@@ -1173,7 +1081,6 @@ _comps=(
 'pg_restore' '_postgresql'
 'pg_upgrade' '_postgresql'
 'pgrep' '_pgrep'
-'phing' '_phing'
 'php' '_php'
 'pick' '_mh'
 'picocom' '_picocom'
@@ -1186,8 +1093,6 @@ _comps=(
 'ping' '_ping'
 'ping6' '_ping'
 'piuparts' '_piuparts'
-'pixz' '_pixz'
-'pkcon' '_pkcon'
 'pkg' '_pkg5'
 'pkg-config' '_pkg-config'
 'pkg_add' '_bsd_pkg'
@@ -1200,10 +1105,8 @@ _comps=(
 'pkgrm' '_pkgrm'
 'pkgtool' '_pkgtool'
 'pkill' '_pgrep'
-'play' '_play'
 'pldd' '_pids'
 'plutil' '_plutil'
-'pm2' '_pm2'
 'pmake' '_make'
 'pman' '_perl_modules'
 'pmap' '_pmap'
@@ -1223,7 +1126,6 @@ _comps=(
 'policytool' '_java'
 'pon' '_pon'
 'popd' '_directory_stack'
-'port' '_port'
 'portaudit' '_portaudit'
 'portlint' '_portlint'
 'portmaster' '_portmaster'
@@ -1280,7 +1182,6 @@ _comps=(
 'pwait' '_pids'
 'pwdx' '_pids'
 'pwgen' '_pwgen'
-'pygmentize' '_pygmentize'
 'pyhtmlizer' '_twisted'
 'qdbus' '_qdbus'
 'qiv' '_qiv'
@@ -1288,9 +1189,7 @@ _comps=(
 'querybts' '_bug'
 'quilt' '_quilt'
 'r' '_fc'
-'rails' '_rails'
 'rake' '_rake'
-'ralio' '_ralio'
 'ranlib' '_ranlib'
 'rar' '_rar'
 'rc' '_sh'
@@ -1307,8 +1206,6 @@ _comps=(
 'readshortcut' '_readshortcut'
 'readshortcut.exe' '_readshortcut'
 'rebootin' '_rebootin'
-'rec' '_redis-cli'
-'redis-cli' '_redis-cli'
 'refile' '_mh'
 'rehash' '_hash'
 'reindexdb' '_postgresql'
@@ -1321,12 +1218,10 @@ _comps=(
 'reprepro' '_reprepro'
 'restart' '_initctl'
 'retawq' '_webbrowser'
-'rfkill' '_rfkill'
 'rg' '_rg'
 'rgview' '_vim'
 'rgvim' '_vim'
 'ri' '_ri'
-'rkt' '_rkt'
 'rlogin' '_rlogin'
 'rm' '_rm'
 'rmadison' '_madison'
@@ -1349,15 +1244,11 @@ _comps=(
 'rpmverify' '_rpm'
 'rrdtool' '_rrdtool'
 'rsh' '_rlogin'
-'rslsync' '_rslsync'
-'rspec' '_rspec'
-'rsvm' '_rsvm'
 'rsync' '_rsync'
 'rtin' '_tin'
 'rubber' '_rubber'
 'rubber-info' '_rubber'
 'rubber-pipe' '_rubber'
-'rubocop' '_rubocop'
 'ruby' '_ruby'
 'ruby-mri' '_ruby'
 'run-help' '_run-help'
@@ -1374,11 +1265,8 @@ _comps=(
 'sar' '_sysstat'
 'savecore' '_savecore'
 'say' '_say'
-'sbt' '_sbt'
 'sbuild' '_sbuild'
 'sc_usage' '_sc_usage'
-'scala' '_scala'
-'scalac' '_scala'
 'scan' '_mh'
 'sccs' '_sccs'
 'sccsdiff' '_sccs'
@@ -1391,10 +1279,8 @@ _comps=(
 'screen' '_screen'
 'script' '_script'
 'scriptreplay' '_script'
-'scrub' '_scrub'
 'scselect' '_scselect'
 'scutil' '_scutil'
-'sdd' '_sdd'
 'seaf-cli' '_seafile'
 'sed' '_sed'
 'senlin' '_openstack'
@@ -1402,15 +1288,12 @@ _comps=(
 'serialver' '_java'
 'service' '_service'
 'set' '_set'
-'setcap' '_setcap'
 'setfacl' '_setfacl'
 'setfacl.exe' '_setfacl'
 'setfattr' '_attr'
 'setopt' '_setopt'
 'setsid' '_setsid'
-'setup.py' '_setup.py'
 'setxkbmap' '_setxkbmap'
-'sfdx' '_sfdx'
 'sftp' '_ssh'
 'sh' '_sh'
 'sha1' '_cksum'
@@ -1428,7 +1311,6 @@ _comps=(
 'show' '_mh'
 'showchar' '_psutils'
 'showmount' '_showmount'
-'showoff' '_showoff'
 'shred' '_shred'
 'shuf' '_shuf'
 'shutdown' '_shutdown'
@@ -1464,7 +1346,6 @@ _comps=(
 'sqlite3' '_sqlite'
 'sqsh' '_sqsh'
 'sr' '_surfraw'
-'srm' '_srm'
 'srptool' '_gnutls'
 'ss' '_ss'
 'ssh' '_ssh'
@@ -1474,7 +1355,6 @@ _comps=(
 'ssh-keygen' '_ssh'
 'ssh-keyscan' '_ssh'
 'sshfs' '_sshfs'
-'stack' '_stack'
 'star' '_tar'
 'start' '_initctl'
 'stat' '_stat'
@@ -1492,18 +1372,15 @@ _comps=(
 'stty' '_stty'
 'su' '_su'
 'subl' '_sublimetext'
-'subliminal' '_subliminal'
 'sudo' '_sudo'
 'sudoedit' '_sudo'
 'sum' '_cksum'
-'supervisorctl' '_supervisorctl'
 'surfraw' '_surfraw'
 'sv' '_runit'
 'svcadm' '_svcadm'
 'svccfg' '_svccfg'
 'svcprop' '_svcprop'
 'svcs' '_svcs'
-'svm' '_svm'
 'svn' '_subversion'
 'svn-buildpackage' '_svn-buildpackage'
 'svnadmin' '_subversion'
@@ -1525,7 +1402,6 @@ _comps=(
 'talk' '_other_accounts'
 'tar' '_tar'
 'tardy' '_tardy'
-'tarsnap' '_tarsnap'
 'tcp_open' '_tcpsys'
 'tcpdump' '_tcpdump'
 'tcptraceroute' '_tcptraceroute'
@@ -1534,7 +1410,6 @@ _comps=(
 'tdd' '_devtodo'
 'tde' '_devtodo'
 'tdr' '_devtodo'
-'teamocil' '_teamocil'
 'tee' '_tee'
 'telnet' '_telnet'
 'tex' '_tex'
@@ -1543,7 +1418,6 @@ _comps=(
 'texi2pdf' '_texinfo'
 'texindex' '_texinfo'
 'tg' '_topgit'
-'thor' '_thor'
 'tidy' '_tidy'
 'time' '_precommand'
 'timeout' '_timeout'
@@ -1554,15 +1428,12 @@ _comps=(
 'tla' '_tla'
 'tload' '_tload'
 'tmux' '_tmux'
-'tmuxinator' '_tmuxinator'
-'tmuxp' '_tmuxp'
 'todo' '_devtodo'
 'todo.sh' '_todo.sh'
 'toilet' '_toilet'
 'top' '_top'
 'totdconfig' '_totd'
 'touch' '_touch'
-'tox' '_tox'
 'tpb' '_tpb'
 'tpkg-debarch' '_toolchain-source'
 'tpkg-install' '_toolchain-source'
@@ -1577,10 +1448,6 @@ _comps=(
 'transmission-remote' '_transmission'
 'trap' '_trap'
 'trash' '_trash'
-'trash-empty' '_trash-empty'
-'trash-list' '_trash-list'
-'trash-put' '_trash-put'
-'trash-restore' '_trash-restore'
 'tree' '_tree'
 'trial' '_twisted'
 'trove' '_openstack'
@@ -1599,8 +1466,6 @@ _comps=(
 'txt' '_hosts'
 'type' '_which'
 'typeset' '_typeset'
-'udisksctl' '_udisksctl'
-'ufw' '_ufw'
 'ulimit' '_ulimit'
 'uml_mconsole' '_uml'
 'uml_moo' '_uml'
@@ -1652,7 +1517,6 @@ _comps=(
 'userdel' '_users'
 'usermod' '_user_admin'
 'vacuumdb' '_postgresql'
-'vagrant' '_vagrant'
 'val' '_sccs'
 'valgrind' '_valgrind'
 'vared' '_vared'
@@ -1671,7 +1535,6 @@ _comps=(
 'vmstat' '_vmstat'
 'vncserver' '_vnc'
 'vncviewer' '_vnc'
-'vnstat' '_vnstat'
 'vorbiscomment' '_vorbis'
 'vpnc' '_vpnc'
 'vpnc-connect' '_vpnc'
@@ -1684,8 +1547,6 @@ _comps=(
 'watch' '_watch'
 'watcher' '_openstack'
 'wc' '_wc'
-'wemux' '_wemux'
-'wg-quick' '_wg-quick'
 'wget' '_wget'
 'what' '_sccs'
 'whatis' '_man'
@@ -1719,7 +1580,6 @@ _comps=(
 'xfontsel' '_x_utils'
 'xfreerdp' '_rdesktop'
 'xhost' '_x_utils'
-'xinput' '_xinput'
 'xkill' '_x_utils'
 'xli' '_xloadimage'
 'xloadimage' '_xloadimage'
@@ -1739,7 +1599,6 @@ _comps=(
 'xrandr' '_xrandr'
 'xrdb' '_x_utils'
 'xscreensaver-command' '_xscreensaver'
-'xsel' '_xsel'
 'xset' '_xset'
 'xsetbg' '_xloadimage'
 'xsetroot' '_x_utils'
@@ -1759,8 +1618,6 @@ _comps=(
 'xz' '_xz'
 'xzcat' '_xz'
 'yafc' '_yafc'
-'yaourt' '_yaourt'
-'yaourt.static' '_yaourt'
 'yarn' '_yarn'
 'yash' '_sh'
 'yast' '_yast'
@@ -1780,7 +1637,6 @@ _comps=(
 'yumdb' '_yum'
 'zargs' '_zargs'
 'zcalc' '_zcalc'
-'zcash-cli' '_zcash-cli'
 'zcat' '_zcat'
 'zcompile' '_zcompile'
 'zcp' '_zmv'
@@ -1842,20 +1698,10 @@ _services=(
 '-redirect-,>,gzip' 'gunzip'
 '-redirect-,>,xz' 'unxz'
 'Mail' 'mail'
-'VBoxHeadless' 'vboxheadless'
-'VBoxManage' 'vboxmanage'
-'_git_log_prettily' 'git-log'
 'bzcat' 'bunzip2'
 'dch' 'debchange'
 'gchgrp' 'chgrp'
 'gchown' 'chown'
-'gdv' 'git-diff'
-'ggf' 'git-checkout'
-'ggfl' 'git-checkout'
-'ggl' 'git-checkout'
-'ggp' 'git-checkout'
-'ggpnp' 'git-checkout'
-'ggu' 'git-checkout'
 'gnupod_INIT.pl' 'gnupod_INIT'
 'gnupod_addsong.pl' 'gnupod_addsong'
 'gnupod_check.pl' 'gnupod_check'
@@ -1880,7 +1726,6 @@ _services=(
 'xelatex' 'latex'
 'xetex' 'tex'
 'xzcat' 'unxz'
-'yaourt.static' 'yaourt'
 'zf_chgrp' 'chgrp'
 'zf_chown' 'chown'
 )
@@ -1898,7 +1743,6 @@ _postpatcomps=(
 '-value-,(ftp|http(|s))_proxy,-default-' '_urls'
 '-value-,*PATH,-default-' '_dir_list'
 '-value-,*path,-default-' '_directories'
-'-value-,CCACHE_*,-default-' '_ccache'
 '-value-,LC_*,-default-' '_locales'
 '-value-,RUBY(LIB|OPT|PATH),-default-' '_ruby'
 'c++-*' '_gcc'
@@ -2137,33 +1981,7 @@ autoload -Uz _nvm _yarn _hub _git _docker \
             _zftp _zip _zle _zlogin _zmodload \
             _zmv _zoneadm _zones _zparseopts _zpool \
             _zpty _zsh _zsh-mime-handler _zsocket _zstyle \
-            _ztodo _zypper _afew _android _archlinux-java \
-            _artisan _atach _bitcoin-cli _bower _bundle \
-            _caffeinate _cap _cask _ccache _cf \
-            _cheat _choc _chromium _cmake _coffee \
-            _composer _conan _concourse _console _dad \
-            _debuild _dget _dhcpcd _diana _docpad \
-            _drush _ecdsautil _emulator _envdir _exportfs \
-            _fab _ffind _fleetctl _flutter _force \
-            _fwupdmgr _gas _ghc _gist _git-flow \
-            _git-journal _git-pulls _git-wtf _glances _golang \
-            _google _gtk-launch _hledger _homestead _httpie \
-            _ibus _include-what-you-use _inxi _jmeter _jmeter-plugins \
-            _jonas _jrnl _kak _kitchen _knife \
-            _language_codes _lunchy _middleman _mina _mix \
-            _mussh _mvn _nano _nftables _node \
-            _nvm _openssl _optirun _patool _perf \
-            _periscope _pgsql_utils _phing _pixz _pkcon \
-            _play _pm2 _port _pygmentize _rails \
-            _ralio _redis-cli _rfkill _rkt _rslsync \
-            _rspec _rsvm _rubocop _sbt _scala \
-            _scrub _sdd _setcap _setup.py _sfdx \
-            _showoff _srm _stack _subl _subliminal \
-            _supervisorctl _svm _tarsnap _teamocil _thor \
-            _tmuxinator _tmuxp _tox _trash-empty _trash-list \
-            _trash-put _trash-restore _udisksctl _ufw _vagrant \
-            _virtualbox _vnstat _wemux _wg-quick _xinput \
-            _xsel _yaourt _yarn _zcash-cli
+            _ztodo _zypper
 autoload -Uz +X _call_program
 
 typeset -gUa _comp_assocs
